# python-yomemo-mcp

./: .gitignore  CURSOR_RULES.md  LICENSE  PUBLISHING.md  README.md  llm.md  pyproject.toml
src/yomemoai_mcp/: __init__.py  client.py  server.py
